Grunt copy tasks now overwrite. Fixed overflow in styles. Fixed event bindings for newly added items to collectionTable. Fixed submit button not submitting from the autoform due to being moved outside.

--- a/app/client/resources/style.less
+++ b/app/client/resources/style.less
@@ -66,10 +66,6 @@ body {
           -webkit-box-shadow: none;
           border-radius: 0;
           // TODO(aramk) Remove when migrating from bootstrap.
-          .form-group {
-            padding: 0 10px;
-            margin-bottom: 10px;
-          }
         }
       }
       .title {
@@ -143,6 +139,7 @@ body {
       height: auto;
       background: black;
       color: white;
+      overflow: hidden;
     }
   }
 }
@@ -181,5 +178,9 @@ body {
     width: 100%;
     padding: 0;
     padding-top: 10px;
+    > * {
+      padding: 0 10px;
+      margin-bottom: 10px;
+    }
   }
 }
